[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hytoolpy"
version = "0.1.0"
description = "Hydrological tools and models for pumping test analysis in Python"
authors = [
  { name="Celestin DARTIGUES", email="celestin.dartigues@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas"
]

[tool.setuptools.packages.find]
where = ["src"]
