[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hytoolpy"
version = "0.1.0"
description = "Hydrological tools and models for pumping test analysis in Python"
authors = [
  { name="Celestin DARTIGUES", email="celestin.dartigues@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/Celestin-Dartigues/Hytoolpy"
"Bug Tracker" = "https://github.com/Celestin-Dartigues/Hytoolpy/issues"

[tool.setuptools.packages.find]
where = ["src"]

